Update JDK / Spring Boot.